// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Meetings /> should render meetings correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-iAEyYk cPjprN"
  >
    <div
      class="sc-fsQiph kiFeGQ"
    >
      <div
        class="css-b82b48"
      >
        ((Calendar))
        <div
          class="sc-jTrPJq bOCSzy"
        >
          <div
            class="sc-eDDNvR gtHwmp"
          >
            <div
              class="sc-beqWaB ljmzQY"
            >
              <span
                class="sc-hLseeU RSRGY"
              >
                20:00-20:30
              </span>
              <span
                class="sc-gueYoa kfKkec"
              >
                0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
              </span>
              <span
                class="sc-dmqHEX gIMSGZ"
              >
                30 minute meeting
              </span>
            </div>
          </div>
          <div
            class="sc-gLDzan bxuKqx"
          >
            Times shown in local time
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Meetings /> should render no meetings correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-iAEyYk cPjprN"
  >
    <div
      class="sc-fsQiph kiFeGQ"
    >
      <div
        class="css-b82b48"
      >
        ((Calendar))
        <div
          class="sc-jTrPJq bOCSzy"
        >
          <div
            class="sc-eDDNvR gtHwmp"
          />
          <div
            class="sc-gLDzan bxuKqx"
          >
            Times shown in local time
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
